--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,15 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+
+    //recycler view
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    //circle imageview
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
